correção de href entre as paginas

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
 	<title>Desafio Rastreamento de Usuários</title>
@@ -14,7 +14,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 		
-		<a class="navbar-brand" href="/"><span class="text-primary">SaaS Enterprise</span></a>
+		<a class="navbar-brand" href="/site"><span class="text-primary">SaaS Enterprise</span></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
 		 aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
@@ -23,13 +23,13 @@
 		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/site">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="/pages/contato.html">Contato <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="pages/contato.html">Contato <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="/pages/sobre.html">Sobre<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="pages/sobre.html">Sobre<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
@@ -58,14 +58,14 @@
 					<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
 						nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 					</p>
-					<p><a class="btn btn-secondary" href="/pages/produto.html" role="button">View details &raquo;</a></p>
+					<p><a class="btn btn-secondary" href="pages/produto.html" role="button">View details &raquo;</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>Servidor PHP</h2>
 					<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
 						nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 					</p>
-					<p><a class="btn btn-secondary" href="/pages/produto.html" role="button">View details &raquo;</a></p>
+					<p><a class="btn btn-secondary" href="pages/produto.html" role="button">View details &raquo;</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>Servidor Node.js</h2>
@@ -83,7 +83,10 @@
 	</main>
 
 	<footer class="container">
-		<p>&copy; Felipe Pereira, 2017</p>
+		<div class="d-flex">
+			<p class="mr-auto">&copy; Felipe Pereira, 2017</p>
+			<p class="">v 1.0</p>
+		</div>
 	</footer>
 </body>
 
