--- a/site/pages/sobre.html
+++ b/site/pages/sobre.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/"><span class="text-primary">SaaS Enterprise</span></a>
+        <a class="navbar-brand" href="/site"><span class="text-primary">SaaS Enterprise</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
             aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/site">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/contato.html">Contato <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="contato.html">Contato <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/sobre.html">Sobre<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -48,16 +48,18 @@
                         mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
                         nibh, ut fermentum massa justo sit amet risus. Etiam porta
                     </p>
-                    <p><a class="btn btn-secondary" href="/pages/contato.html" role="button">Contate-nos!</a></p>
+                    <p><a class="btn btn-secondary" href="/contato.html" role="button">Contate-nos!</a></p>
                 </div>
             </div>
+            <hr>
         </div>
-
-
     </main>
 
     <footer class="container">
-        <p>&copy; Felipe Pereira, 2017</p>
+        <div class="d-flex">
+            <p class="mr-auto">&copy; Felipe Pereira, 2017</p>
+            <p class="">v 1.0</p>
+        </div>
     </footer>
 </body>
 
