--- a/site/pages/produto.html
+++ b/site/pages/produto.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/"><span class="text-primary">  SaaS Enterprise</span></a>
+        <a class="navbar-brand" href="/site"><span class="text-primary">  SaaS Enterprise</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
             aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/site">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/contato.html">Contato <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="contato.html">Contato <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/sobre.html">Sobre<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -48,7 +48,7 @@
                     <div class="d-flex justify-content-center">
 
                         <div class="card" style="width: 20rem;">
-                            <img class="card-img-top" src="/images/java.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="/site/images/java.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
@@ -59,11 +59,15 @@
                     </div>
                 </div>
             </div>
+            <hr>
         </div>
     </main>
 
     <footer class="container">
-        <p>&copy; Felipe Pereira, 2017</p>
+        <div class="d-flex">
+            <p class="mr-auto">&copy; Felipe Pereira, 2017</p>
+            <p class="">v 1.0</p>
+        </div>
     </footer>
 </body>
 
