correcao de path para pagina de contatos

--- a/site/pages/sobre.html
+++ b/site/pages/sobre.html
@@ -48,7 +48,7 @@
                         mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
                         nibh, ut fermentum massa justo sit amet risus. Etiam porta
                     </p>
-                    <p><a class="btn btn-secondary" href="/contato.html" role="button">Contate-nos!</a></p>
+                    <p><a class="btn btn-secondary" href="contato.html" role="button">Contate-nos!</a></p>
                 </div>
             </div>
             <hr>
