--- a/site/pages/contato.html
+++ b/site/pages/contato.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="/site/css/contato.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
         crossorigin="anonymous">
 </head>
@@ -49,16 +50,18 @@
                     <br>
                     <form>
                         <div class="form-group">
+                            <label for="exampleInputEmail1">Email: <span>*</span></label>
                             <div class="input-group">
-                                <span class="input-group-addon">@</span>
+                                <span class="input-group-addon text-primary">@</span>
                                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Informe seu email">
                             </div>
                             <small class="form-text text-muted">Não compartilharemos suas informações de contato</small>
                         </div>
 
                         <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Descrição:</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escreva sua mensagem"></textarea>
-                            <small class="form-text text-muted">As informações que você nos fornecer aqui não serão compartilhadas com mais ninguém</small>
+                            <small class="form-text text-muted">Deixe-nos uma mensagem (não obrigatório)</small>
                         </div>
 
                         <button type="submit" class="btn btn-primary">Enviar</button>
