--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		
+
 		<a class="navbar-brand" href="/site"><span class="text-primary">SaaS Enterprise</span></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
 		 aria-expanded="false" aria-label="Toggle navigation">
@@ -44,9 +44,10 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="banner">
-						<h1 class="display-4 text-center">SaaS Enterprise</h1>
-						<p class="text-center">A SaaS Enterprise é uma empresa preocupada em entregar aos seus clientes a template for a simple marketing digital. It includes a large callout called a jumbotron and
-							three supporting pieces of content. Nós utilizamos a starting point da melhor maneira possível.</p>
+					<h1 class="display-4 text-center">SaaS Enterprise</h1>
+					<p class="text-center">A SaaS Enterprise é uma empresa preocupada em entregar aos seus clientes a template for a simple marketing digital.
+						It includes a large callout called a jumbotron and three supporting pieces of content. Nós utilizamos a starting point
+						da melhor maneira possível.</p>
 				</div>
 			</div>
 		</div>
@@ -85,7 +86,7 @@
 	<footer class="container">
 		<div class="d-flex">
 			<p class="mr-auto">&copy; Felipe Pereira, 2017</p>
-			<p class="">v 1.0</p>
+			<p>v 1.0</p>
 		</div>
 	</footer>
 </body>
@@ -96,6 +97,11 @@
  crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
  crossorigin="anonymous"></script>
+<script src="trackingJS.min.js"></script>
+<script type="text/javascript">
+	trackingJS.config('http://localhost:3000/activity');
+</script>
+
 </body>
 
 </html>
