--- a/site/pages/sobre.html
+++ b/site/pages/sobre.html
@@ -69,6 +69,10 @@
     crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
     crossorigin="anonymous"></script>
+    <script src="/site/trackingJS.min.js"></script>
+    <script type="text/javascript">
+        trackingJS.config('http://localhost:3000/activity');
+    </script>
 </body>
 
 </html>
