Ajustes de url e reestruturacao no projeto

--- a/site/index.html
+++ b/site/index.html
@@ -99,7 +99,7 @@
  crossorigin="anonymous"></script>
 <script src="trackingJS.min.js"></script>
 <script type="text/javascript">
-	trackingJS.config('http://localhost:3000/activity');
+	trackingJS.config('https://rastreamento-usuarios-app.herokuapp.com/activity');
 </script>
 
 </body>
