--- a/site/pages/produto.html
+++ b/site/pages/produto.html
@@ -79,8 +79,7 @@
 
     <script src="/site/trackingJS.min.js"></script>
     <script type="text/javascript">
-        trackingJS.config('http://localhost:3000/activity');
-
+        trackingJS.config('https://rastreamento-usuarios-app.herokuapp.com/activity');
     </script>
 </body>
 
