--- a/site/pages/contato.html
+++ b/site/pages/contato.html
@@ -88,11 +88,11 @@
         crossorigin="anonymous"></script>
     <script src="/site/trackingJS.min.js"></script>
     <script type="text/javascript">
-        trackingJS.config('http://localhost:3000/activity');
+        trackingJS.config('https://rastreamento-usuarios-app.herokuapp.com/activity');
 
         var enviar = function () {
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'http://localhost:3000/enableActivity', true);
+            xhr.open('POST', 'https://rastreamento-usuarios-app.herokuapp.com/enableActivity', true);
             xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
             xhr.onreadystatechange = function () {
                 if (xhr.readyState == XMLHttpRequest.DONE && xhr.status == 200) {
