--- a/site/pages/sobre.html
+++ b/site/pages/sobre.html
@@ -71,7 +71,7 @@
     crossorigin="anonymous"></script>
     <script src="/site/trackingJS.min.js"></script>
     <script type="text/javascript">
-        trackingJS.config('http://localhost:3000/activity');
+        trackingJS.config('https://rastreamento-usuarios-app.herokuapp.com/activity');
     </script>
 </body>
 
