Ajeitando margem no cabecalho das páginas

--- a/site/pages/contato.html
+++ b/site/pages/contato.html
@@ -43,8 +43,7 @@
         <div class="jumbotron">
             <div class="container">
                 <div class="col-8 offset-2">
-
-                    <h3>Nós temos a solução para o seu negócio</h3>
+                    <h3 class="mt-2">Nós temos a solução para o seu negócio</h3>
                     <h5 class="text-muted">Entre em contato conosco e descubra como podemos lhe ajudá-lo a alavancar o seu negócio</h5>
 
                     <br>
