--- a/site/pages/sobre.html
+++ b/site/pages/sobre.html
@@ -42,8 +42,7 @@
         <div class="jumbotron">
             <div class="container">
                 <div class="col-8 offset-2">
-
-                    <h2>Quem somos</h2>
+                    <h2 class="mt-2">Quem somos</h2>
                     <p>Somos uma empresa no seguimento de Software as a Service e prestamos os serviços de Donec id elit non
                         mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
                         nibh, ut fermentum massa justo sit amet risus. Etiam porta
