--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
 	 crossorigin="anonymous">
 </head>
@@ -40,15 +39,12 @@
 	</nav>
 
 	<main role="main">
-
 		<div class="jumbotron">
-			<div class="container">
-				<div class="banner">
-					<h1 class="display-4 text-center">SaaS Enterprise</h1>
-					<p class="text-center">A SaaS Enterprise é uma empresa preocupada em entregar aos seus clientes a template for a simple marketing digital.
-						It includes a large callout called a jumbotron and three supporting pieces of content. Nós utilizamos a starting point
-						da melhor maneira possível.</p>
-				</div>
+			<div class="container mt-2">
+				<h1 class="display-4 text-center">SaaS Enterprise</h1>
+				<p class="text-center">A SaaS Enterprise é uma empresa preocupada em entregar aos seus clientes a template for a simple marketing digital.
+					It includes a large callout called a jumbotron and three supporting pieces of content. Nós utilizamos a starting point
+					da melhor maneira possível.</p>
 			</div>
 		</div>
 
