--- a/site/pages/produto.html
+++ b/site/pages/produto.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/site"><span class="text-primary">  SaaS Enterprise</span></a>
+        <a class="navbar-brand" href="/site"><span class="text-primary">SaaS Enterprise</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
             aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,7 @@
         <div class="jumbotron">
             <div class="container">
                 <div class="col-8 offset-2">
-
-                    <h2 class="text-center">Servidor para aplicações Java</h2>
+                    <h2 class="text-center mt-2">Servidor para aplicações Java</h2>
                     <h5 class="text-center">Desenvolva seus projetos em Java sem se preocupar com detalhes de infraestrutura</h5>
                     <div class="d-flex justify-content-center">
 
