--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt">
 
 <head>
 	<title>Desafio Rastreamento de Usuários</title>
@@ -12,23 +12,30 @@
 
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-
-		<a class="navbar-brand" href="/site"><span class="text-primary">SaaS Enterprise</span></a>
+		<a class="navbar-brand" href="/site">
+			<span class="text-primary">SaaS Enterprise</span>
+		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
 		 aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
+			<span class="navbar-toggler-icon"></span>
 		</button>
 
 		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="/site">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/site">Home
+						<span class="sr-only">(current)</span>
+					</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="pages/contato.html">Contato <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="pages/contato.html">Contato
+						<span class="sr-only">(current)</span>
+					</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="pages/sobre.html">Sobre<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="pages/sobre.html">Sobre
+						<span class="sr-only">(current)</span>
+					</a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
@@ -39,11 +46,11 @@
 	</nav>
 
 	<main role="main">
-		<div class="jumbotron">
-			<div class="container mt-2">
+		<div class="jumbotron mt-4">
+			<div class="container">
 				<h1 class="display-4 text-center">SaaS Enterprise</h1>
-				<p class="text-center">A SaaS Enterprise é uma empresa preocupada em entregar aos seus clientes a template for a simple marketing digital.
-					It includes a large callout called a jumbotron and three supporting pieces of content. Nós utilizamos a starting point
+				<p class="text-center">A SaaS Enterprise é uma empresa preocupada em entregar aos seus clientes a template for a simple marketing digital. It
+					includes a large callout called a jumbotron and three supporting pieces of content. Nós utilizamos a starting point
 					da melhor maneira possível.</p>
 			</div>
 		</div>
@@ -55,14 +62,18 @@
 					<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
 						nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 					</p>
-					<p><a class="btn btn-secondary" href="pages/produto.html" role="button">View details &raquo;</a></p>
+					<p>
+						<a class="btn btn-secondary" href="pages/produto.html" role="button">View details &raquo;</a>
+					</p>
 				</div>
 				<div class="col-md-4">
 					<h2>Servidor PHP</h2>
 					<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
 						nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 					</p>
-					<p><a class="btn btn-secondary" href="pages/produto.html" role="button">View details &raquo;</a></p>
+					<p>
+						<a class="btn btn-secondary" href="pages/produto.html" role="button">View details &raquo;</a>
+					</p>
 				</div>
 				<div class="col-md-4">
 					<h2>Servidor Node.js</h2>
@@ -70,12 +81,12 @@
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
 						risus.
 					</p>
-					<p><a class="btn btn-secondary" href="/pages/produto.html" role="button">View details &raquo;</a></p>
+					<p>
+						<a class="btn btn-secondary" href="/pages/produto.html" role="button">View details &raquo;</a>
+					</p>
 				</div>
 			</div>
-
 			<hr>
-
 		</div>
 	</main>
 
