--- a/site/pages/produto.html
+++ b/site/pages/produto.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <title>Desafio Rastreamento de Usuários - Detalhes do produto</title>
@@ -12,22 +12,30 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/site"><span class="text-primary">SaaS Enterprise</span></a>
+        <a class="navbar-brand" href="/site">
+            <span class="text-primary">SaaS Enterprise</span>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
             aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/site">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/site">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="contato.html">Contato <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="contato.html">Contato
+                        <span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="sobre.html">Sobre
+                        <span class="sr-only">(current)</span>
+                    </a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -39,10 +47,10 @@
 
     <main role="main">
 
-        <div class="jumbotron">
+        <div class="jumbotron mt-4">
             <div class="container">
                 <div class="col-8 offset-2">
-                    <h2 class="text-center mt-2">Servidor para aplicações Java</h2>
+                    <h2 class="text-center">Servidor para aplicações Java</h2>
                     <h5 class="text-center">Desenvolva seus projetos em Java sem se preocupar com detalhes de infraestrutura</h5>
                     <div class="d-flex justify-content-center">
 
@@ -58,9 +66,10 @@
                     </div>
                 </div>
             </div>
-            <hr>
         </div>
     </main>
+
+    <hr>
 
     <footer class="container">
         <div class="d-flex">
