--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<a class="navbar-brand" href="/site">
+		<a class="navbar-brand" href="/">
 			<span class="text-primary">SaaS Enterprise</span>
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
@@ -23,7 +23,7 @@
 		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="/site">Home
+					<a class="nav-link" href="/">Home
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
