--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>Desafio Rastreamento de Usuários - Detalhes do produto</title>
+    <title>Desafio Rastreamento de Usuários - Sobre</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/site">
+        <a class="navbar-brand" href="/">
             <span class="text-primary">SaaS Enterprise</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/site">Home
+                    <a class="nav-link" href="/">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -46,49 +46,42 @@
     </nav>
 
     <main role="main">
-
         <div class="jumbotron mt-4">
             <div class="container">
                 <div class="col-8 offset-2">
-                    <h2 class="text-center">Servidor para aplicações Java</h2>
-                    <h5 class="text-center">Desenvolva seus projetos em Java sem se preocupar com detalhes de infraestrutura</h5>
-                    <div class="d-flex justify-content-center">
-
-                        <div class="card" style="width: 20rem;">
-                            <img class="card-img-top" src="/site/images/java.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                            <div class="card-footer text-muted text-center">
-                                A partir de R$ 59,90 por mês
-                            </div>
-                        </div>
-                    </div>
+                    <h2>Quem somos</h2>
+                    <p>Somos uma empresa no seguimento de Software as a Service e prestamos os serviços de Donec id elit non
+                        mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+                        nibh, ut fermentum massa justo sit amet risus. Etiam porta
+                    </p>
+                    <p>
+                        <a class="btn btn-secondary" href="contato.html" role="button">Contate-nos!</a>
+                    </p>
                 </div>
             </div>
         </div>
     </main>
 
     <hr>
-
+    
     <footer class="container">
         <div class="d-flex">
             <p class="mr-auto">&copy; Felipe Pereira, 2017</p>
-            <p class="">v 1.0</p>
+            <p>v 1.0</p>
         </div>
     </footer>
+</body>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-        crossorigin="anonymous"></script>
-
-    <script src="/site/js/trackingJS.min.js"></script>
-    <script type="text/javascript">
-        trackingJS.config('https://rastreamento-usuarios-app.herokuapp.com/activity');
-    </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+    crossorigin="anonymous"></script>
+<script src="/js/trackingJS.min.js"></script>
+<script type="text/javascript">
+    trackingJS.config('https://rastreamento-usuarios-app.herokuapp.com/activity');
+</script>
 </body>
 
 </html>
