--- a/pages/produto.html
+++ b/pages/produto.html
@@ -50,8 +50,9 @@
         <div class="jumbotron mt-4">
             <div class="container">
                 <div class="col-8 offset-2">
-                    <h2 class="text-center">Servidor para aplicações Java</h2>
-                    <h5 class="text-center">Desenvolva seus projetos em Java sem se preocupar com detalhes de infraestrutura</h5>
+                    <h3>Servidor para aplicações Java</h3>
+                    <h5 class="text-muted">Desenvolva seus projetos em Java sem se preocupar com detalhes de infraestrutura</h5>
+                    
                     <div class="d-flex justify-content-center">
 
                         <div class="card" style="width: 20rem;">
